# bancointer-python

./: .env.example  .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.py
bancointer/: __init__.py  baixa.py  bancointer.py  banking.py  deprecated.py  util.py
docs/: .gitignore
examples/: baixa.py  boleto.py  boleto_multa_e_mora.py  buscar_pagamentos.py  buscar_pagamentos_darf.py  cancelar_agendamento_pagamento.py  cancelar_cobranca.py  consulta.py  consultar_cobranca_com_vencimento.py  consultar_cobranca_imediata.py  consultar_devolucao.py  consultar_extrato.py  consultar_extrato_pdf.py  consultar_pagamento_pix.py  consultar_pix.py  consultar_saldo.py  criar_cobranca_com_vencimento.py  criar_cobranca_imediata.py  criar_webhook.py  download.py  emitir_cobranca.py  emitir_cobranca_multa_e_mora.py  excluir_webhook.py  extrato.py  generate_txid.py  incluir_pagamento_codbar.py  incluir_pagamento_darf.py  incluir_pagamento_pix.py  obter_webhook_cadastrado.py  pagar_pix_cob.py  pagar_pix_cobv.py  recuperar_cobranca.py  recuperar_cobranca_pdf.py  revisar_cobranca_com_vencimento.py  revisar_cobranca_imediata.py  solicitar_devolucao.py
tests/: test_buscar_pagamento.py  test_buscar_pagamento_darf.py  test_cancelar_agendamento_pagamento.py  test_cancelar_cobranca.py  test_cobranca.py  test_consultar_cobranca_com_vencimento.py  test_consultar_cobranca_imediata.py  test_consultar_devolucao.py  test_consultar_extrato.py  test_consultar_extrato_pdf.py  test_consultar_pagamento_pix.py  test_consultar_pix.py  test_consultar_saldo.py  test_criar_cobranca_com_vencimento.py  test_criar_cobranca_imediata.py  test_criar_webhook.py  test_desconto.py  test_emitir_cobranca.py  test_excluir_webhook.py  test_message.py  (+36 more)
(+103 files in other folders)
