[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bancointer-python"
version = "0.11"
description = "Emita boletos bancários utilizando a API do Banco Inter PJ."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "Renato P. Eduardo Jr", email = "renatojdev@outlook.com" }]
license = { text = "MIT License" }
dependencies = [
    "requests",
    "certifi",
]

[project.optional-dependencies]
dev = [
    "python-decouple",
    "requests-mock",
    "black",
    "setuptools",
    "wheel",
    "twine",
]

[tool.setuptools]
platforms = ["Linux", "Windows"]
include-package-data = true
zip-safe = false
