[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bancointer-python"
version = "0.14"
description = "Emita boletos bancários utilizando a API do Banco Inter PJ."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "Renato P. Eduardo Jr", email = "renatojdev@outlook.com" }]
license = { text = "MIT License" }
dependencies = [
    "requests",
    "certifi",
]

[project.urls]
homepage = "https://github.com/renatojdev/bancointer-python"
repository = "https://github.com/renatojdev/bancointer-python"
documentation = "https://github.com/renatojdev/bancointer-python/blob/main/README.md"


[project.optional-dependencies]
dev = [
    "python-decouple",
    "requests-mock",
    "black",
    "setuptools",
    "wheel",
    "twine",
]

[tool.setuptools]
platforms = ["Linux", "Windows"]
include-package-data = true
zip-safe = false
